[gd_scene load_steps=14 format=3 uid="uid://dnusa7yud0k00"]

[ext_resource type="Script" uid="uid://b8tcib7cuxmbg" path="res://Scripts/game_manager.gd" id="1_cc7uj"]
[ext_resource type="Script" uid="uid://bjd6nnkoo61vr" path="res://Scripts/dungeon_logic.gd" id="1_hmakl"]
[ext_resource type="Texture2D" uid="uid://dwnmocndg7gk7" path="res://Assets/UI/Heart.png" id="2_hmakl"]
[ext_resource type="MeshLibrary" uid="uid://61gf5acs8qic" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/obj_things/Boundslib1.tres" id="4_cc7uj"]
[ext_resource type="PackedScene" uid="uid://blbh1xbrydvng" path="res://Scenes/mage.tscn" id="4_mu2mn"]
[ext_resource type="Script" uid="uid://d07pg1sb8lt1m" path="res://Scripts/edge_detection_compositor.gd" id="5_hmakl"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_idx2o"]
rayleigh_coefficient = 1.29
ground_color = Color(0.313219, 0.479875, 0.8463, 1)

[sub_resource type="Sky" id="Sky_7bm7t"]
sky_material = SubResource("PhysicalSkyMaterial_idx2o")

[sub_resource type="Environment" id="Environment_n4gow"]
background_mode = 1
background_color = Color(0.147604, 0.21763, 0.326386, 1)
sky = SubResource("Sky_7bm7t")
ambient_light_source = 2
ambient_light_color = Color(0.415686, 0.537255, 0.72549, 1)
ambient_light_energy = 1.5
ssao_radius = 1.41
ssao_intensity = 3.39
ssao_detail = 2.0
ssao_sharpness = 0.26
ssil_radius = 3.65
ssil_intensity = 4.0
ssil_sharpness = 0.43
ssil_normal_rejection = 0.9
sdfgi_read_sky_light = false

[sub_resource type="CompositorEffect" id="CompositorEffect_4m062"]
resource_local_to_scene = false
resource_name = ""
enabled = true
effect_callback_type = 4
needs_motion_vectors = false
needs_normal_roughness = true
script = ExtResource("5_hmakl")
metadata/_custom_type_script = "uid://d07pg1sb8lt1m"

[sub_resource type="Compositor" id="Compositor_cc7uj"]
compositor_effects = Array[CompositorEffect]([SubResource("CompositorEffect_4m062")])

[sub_resource type="NavigationMesh" id="NavigationMesh_hmakl"]
vertices = PackedVector3Array(-17.3797, 1.52, -22.75, -16.6297, 1.52, -22.75, -16.1297, 1.52, -24, -17.8797, 1.52, -24, -22.6297, 1.52, -30.75, -11.3797, 1.52, -30.75, -11.3797, 1.52, -34.5, -22.6297, 1.52, -34.5, -3.3797, 1.52, -24, -3.3797, 1.52, -26.5, -7.1297, 1.52, -26.5, -26.8797, 1.52, -26.5, -30.6297, 1.52, -26.5, -30.6297, 1.52, -24, -7.3797, 1.52, -30.5, -26.6297, 1.52, -30.5, -30.8797, 5.27, -22.5, -29.1297, 5.27, -22.75, -31.1297, 5.27, -23, -31.1297, 5.27, 13, -30.6297, 5.27, 13, -3.3797, 5.27, -23, -2.8797, 5.27, -8, -2.8797, 5.27, -23, -16.6297, 1.52, -22.25, -17.6297, 1.52, -22, -16.3797, 1.52, -4.25, -15.8797, 1.52, -3.75, -15.8797, 1.52, -22, -17.6297, 1.52, -4.25, -18.1297, 1.52, -22, -18.1297, 1.52, -3.75, -30.1297, 1.52, -3, -18.1297, 1.52, -3, -30.1297, 1.52, -22, -15.8797, 1.52, -3.25, -4.1297, 1.52, -3.75, -3.8797, 1.52, -22, 13.6203, 1.52, 0.5, 13.6203, 1.52, 2.5, 20.6203, 1.52, 2.5, 12.8703, 1.52, 0, 20.6203, 1.52, -14.5, -2.1297, 1.52, -14.5, -2.1297, 1.52, 0, -2.8797, 9.27, -6.5, -1.1297, 9.27, -6.75, -3.1297, 9.27, -7, -3.1297, 9.27, 13, -2.6297, 9.27, 13, 13.3703, 5.52, -6, 12.6203, 5.52, -6, 12.3703, 5.52, -5.5, 13.3703, 5.52, -0.25, 9.6203, 5.52, -5.5, 9.3703, 5.52, -6, 8.1203, 5.52, -6.25, -2.1297, 5.52, -6, -2.3797, 5.77, -4.25, -2.1297, 5.52, 0.25, 13.3703, 5.52, 0, 20.1203, 5.52, -0.25, 20.1203, 5.52, -6.25, -3.8797, 1.52, 7.75, -3.1297, 1.52, 7.5, -3.1297, 1.52, 6.75, -3.8797, 1.52, 6.5, -15.8797, 1.52, -2, -16.8797, 1.52, -1.75, -16.8797, 1.52, 12, -3.8797, 1.52, 12, -17.3797, 5.27, -3.25, -17.3797, 5.27, -2.75, -16.6297, 5.27, -2.75, -16.6297, 5.27, -3.25, -18.1297, 1.52, -2, -30.1297, 1.52, 12, 13.8703, 5.52, 0.25, 13.6203, 5.52, 2, 9.3703, 2.27, 2, 9.3703, 2.27, 4, 13.6203, 5.52, 4, 12.2036, 4.77, 2, 12.2036, 4.77, 4, 13.8703, 5.52, 5.75, 13.3703, 5.52, 6, 20.1203, 5.52, 6.25, -2.1297, 1.52, 7.75, -2.1297, 1.52, 6.5, 0.620304, 1.52, 10.25, 5.8703, 1.52, 10.75, 5.8703, 1.52, 12.25, 7.8703, 1.52, 12.25, -2.1297, 1.77, 12.25, 0.120304, 1.52, 12.25, 0.120304, 1.52, 10.75, 1.8703, 1.52, 10.5, 1.8703, 1.52, 12, 4.1203, 1.52, 12, 4.1203, 1.52, 10.5, 5.3703, 1.52, 10.25, 8.1203, 1.52, 4.75, -2.1297, 1.52, 2, 7.9328, 1.52, 2, 7.8703, 1.52, 5.5, 13.3703, 1.52, 6, 10.1203, 1.52, 6, 10.1203, 1.52, 12.25, 20.1203, 1.52, 12, 9.8703, 5.52, 6, 9.8703, 5.52, 12.25, 20.1203, 5.52, 12.25, 4.1203, 1.52, 13.5, 1.8703, 1.52, 13.5, 1.6203, 1.52, 18, 2.3703, 1.52, 16.75, 1.3703, 1.52, 14, -6.6297, 1.52, 16.75, -6.6297, 1.52, 20.5, -3.1297, 1.52, 20.5, 3.8703, 1.52, 16.75, 4.8703, 1.52, 14, 4.1203, 1.52, 17.25, -10.6297, 1.52, 14, -10.6297, 1.52, 16.5, 4.3703, 1.52, 18.25, 9.1203, 1.52, 20.5, 12.6203, 1.52, 20.5, 12.6203, 1.52, 16.75, 16.6203, 1.52, 16.5, 16.6203, 1.52, 14, -2.6297, 1.52, 20.75, 2.3703, 1.52, 19.25, 3.1203, 1.52, 24.5, 3.1203, 1.52, 19.25, -2.6297, 1.52, 24.5, 8.6203, 1.52, 20.75, 8.6203, 1.52, 24.5)
polygons = [PackedInt32Array(0, 3, 1), PackedInt32Array(1, 3, 2), PackedInt32Array(3, 4, 2), PackedInt32Array(2, 4, 7), PackedInt32Array(2, 7, 5), PackedInt32Array(5, 7, 6), PackedInt32Array(9, 8, 10), PackedInt32Array(10, 8, 2), PackedInt32Array(12, 11, 13), PackedInt32Array(13, 11, 3), PackedInt32Array(14, 10, 5), PackedInt32Array(5, 10, 2), PackedInt32Array(15, 4, 11), PackedInt32Array(11, 4, 3), PackedInt32Array(18, 17, 16), PackedInt32Array(20, 19, 16), PackedInt32Array(16, 19, 18), PackedInt32Array(23, 22, 21), PackedInt32Array(1, 24, 0), PackedInt32Array(0, 24, 25), PackedInt32Array(28, 27, 26), PackedInt32Array(24, 28, 25), PackedInt32Array(25, 28, 26), PackedInt32Array(25, 26, 29), PackedInt32Array(25, 29, 30), PackedInt32Array(30, 29, 31), PackedInt32Array(31, 33, 32), PackedInt32Array(30, 31, 34), PackedInt32Array(34, 31, 32), PackedInt32Array(36, 35, 27), PackedInt32Array(27, 28, 36), PackedInt32Array(36, 28, 37), PackedInt32Array(40, 39, 38), PackedInt32Array(38, 41, 40), PackedInt32Array(40, 41, 42), PackedInt32Array(44, 43, 41), PackedInt32Array(41, 43, 42), PackedInt32Array(47, 46, 45), PackedInt32Array(49, 48, 45), PackedInt32Array(45, 48, 47), PackedInt32Array(51, 50, 52), PackedInt32Array(52, 50, 53), PackedInt32Array(56, 55, 54), PackedInt32Array(58, 57, 59), PackedInt32Array(59, 57, 56), PackedInt32Array(59, 56, 54), PackedInt32Array(59, 54, 60), PackedInt32Array(53, 60, 52), PackedInt32Array(52, 60, 54), PackedInt32Array(53, 50, 61), PackedInt32Array(61, 50, 62), PackedInt32Array(64, 63, 65), PackedInt32Array(65, 63, 66), PackedInt32Array(67, 36, 68), PackedInt32Array(68, 36, 63), PackedInt32Array(68, 63, 70), PackedInt32Array(68, 70, 69), PackedInt32Array(36, 66, 63), PackedInt32Array(67, 35, 36), PackedInt32Array(74, 73, 71), PackedInt32Array(71, 73, 72), PackedInt32Array(32, 33, 75), PackedInt32Array(75, 68, 32), PackedInt32Array(32, 68, 69), PackedInt32Array(32, 69, 76), PackedInt32Array(60, 53, 77), PackedInt32Array(77, 53, 61), PackedInt32Array(81, 83, 78), PackedInt32Array(78, 83, 82), PackedInt32Array(82, 83, 80), PackedInt32Array(82, 80, 79), PackedInt32Array(86, 85, 84), PackedInt32Array(78, 77, 81), PackedInt32Array(81, 77, 84), PackedInt32Array(84, 77, 61), PackedInt32Array(84, 61, 86), PackedInt32Array(65, 88, 64), PackedInt32Array(64, 88, 87), PackedInt32Array(89, 87, 88), PackedInt32Array(92, 91, 90), PackedInt32Array(95, 94, 93), PackedInt32Array(99, 98, 96), PackedInt32Array(96, 98, 97), PackedInt32Array(79, 101, 103), PackedInt32Array(103, 101, 100), PackedInt32Array(103, 100, 89), PackedInt32Array(103, 89, 88), PackedInt32Array(103, 88, 102), PackedInt32Array(79, 80, 101), PackedInt32Array(90, 100, 92), PackedInt32Array(92, 100, 104), PackedInt32Array(95, 93, 89), PackedInt32Array(89, 93, 87), PackedInt32Array(96, 89, 99), PackedInt32Array(99, 89, 100), PackedInt32Array(101, 104, 100), PackedInt32Array(107, 106, 105), PackedInt32Array(105, 39, 40), PackedInt32Array(107, 105, 108), PackedInt32Array(108, 105, 40), PackedInt32Array(109, 85, 110), PackedInt32Array(110, 85, 86), PackedInt32Array(110, 86, 111), PackedInt32Array(113, 97, 112), PackedInt32Array(112, 97, 98), PackedInt32Array(115, 114, 116), PackedInt32Array(116, 114, 119), PackedInt32Array(116, 119, 117), PackedInt32Array(117, 119, 118), PackedInt32Array(113, 112, 116), PackedInt32Array(116, 112, 121), PackedInt32Array(116, 121, 120), PackedInt32Array(116, 120, 115), PackedInt32Array(121, 122, 120), PackedInt32Array(124, 123, 117), PackedInt32Array(117, 123, 116), PackedInt32Array(122, 121, 125), PackedInt32Array(125, 121, 126), PackedInt32Array(126, 121, 128), PackedInt32Array(126, 128, 127), PackedInt32Array(129, 128, 130), PackedInt32Array(130, 128, 121), PackedInt32Array(119, 114, 131), PackedInt32Array(131, 114, 132), PackedInt32Array(134, 133, 132), PackedInt32Array(132, 133, 131), PackedInt32Array(131, 133, 135), PackedInt32Array(125, 126, 136), PackedInt32Array(125, 136, 134), PackedInt32Array(134, 136, 137), PackedInt32Array(134, 137, 133)]
agent_height = 1.0
agent_max_climb = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_cc7uj"]
size = Vector3(0.515076, 2.84016, 3.36475)

[node name="World" type="Node3D"]

[node name="dungeon_logic" type="Node" parent="."]
script = ExtResource("1_hmakl")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("hearts")]
unique_name_in_owner = true
script = ExtResource("1_cc7uj")
hearts = [NodePath("../UI/Panel/Heart1"), NodePath("../UI/Panel/Heart2"), NodePath("../UI/Panel/Heart3")]

[node name="Timer" type="Timer" parent="GameManager"]
wait_time = 0.5

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]

[node name="Heart1" type="TextureRect" parent="UI/Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 24.0
offset_top = 25.0
offset_right = 196.25
offset_bottom = 184.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_hmakl")
expand_mode = 3

[node name="Heart2" type="TextureRect" parent="UI/Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 114.0
offset_top = 25.0
offset_right = 286.25
offset_bottom = 184.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_hmakl")
expand_mode = 3

[node name="Heart3" type="TextureRect" parent="UI/Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 201.0
offset_top = 25.0
offset_right = 373.25
offset_bottom = 184.0
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_hmakl")
expand_mode = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(320, 180)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.101372, 0.707474, 0.699432, 0.00664804, -0.702556, 0.711598, 0.994826, 0.076786, 0.0665162, 5.85244, 6.7486, 0)
light_color = Color(0.949333, 1, 0.92, 1)
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.5
shadow_blur = 0.1
directional_shadow_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_n4gow")
compositor = SubResource("Compositor_cc7uj")

[node name="all" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="SubViewportContainer/SubViewport/all"]
navigation_mesh = SubResource("NavigationMesh_hmakl")

[node name="per" type="Node" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D"]

[node name="Player" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D/per" instance=ExtResource("4_mu2mn")]
unique_name_in_owner = true
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 3, 1, 18)
safe_margin = 0.1

[node name="camera_rig" type="Node3D" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D/per"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 18)

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D/per/camera_rig"]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 10.5755, 10.1963)
current = true
fov = 60.0
size = 15.0
far = 50.0

[node name="env" type="Node" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D"]

[node name="floor" type="GridMap" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D/env"]
mesh_library = ExtResource("4_cc7uj")
data = {
"cells": PackedInt32Array(1, 3, 1048605, 1, 1, 1048605, 1, 5, 1048605, 65535, 3, 1048605, 65535, 1, 1048605, 65535, 5, 1048605, 3, 3, 1048605, 3, 5, 1048605, 3, 1, 1048605, 65533, 65531, 1048605, 65531, 65531, 1048605, 65529, 65531, 1048605, 65527, 65531, 1048605, 65533, 65529, 1048605, 65531, 65529, 1048605, 65529, 65529, 1048605, 65527, 65529, 1048605, 65535, 65531, 1048605, 65535, 65529, 1048605, 1, 65531, 1048605, 1, 65529, 1048605, 3, 65531, 1048605, 3, 65529, 1048605, 131075, 0, 1, 131073, 0, 1, 196607, 0, 1, 196606, 1, 1441793, 196606, 3, 1441793, 196606, 5, 1441793, 196607, 6, 655361, 131073, 5, 655361, 131072, 6, 1048580, 131074, 6, 1048580, 131075, 6, 0, 65535, 65535, 655389, 65535, 65533, 655389, 1, 65535, 655389, 1, 65533, 655389, 3, 65535, 655389, 3, 65533, 655389, 5, 65535, 655389, 5, 65533, 655389, 5, 65531, 655389, 5, 65529, 655389, 7, 65535, 655389, 7, 65533, 655389, 7, 65531, 655389, 7, 65529, 655389, 9, 65535, 655389, 9, 65533, 655389, 9, 65531, 655389, 9, 65529, 655389, 7, 1, 655389, 9, 1, 655389, 7, 3, 655389, 9, 3, 655389, 5, 3, 655389, 5, 5, 655389, 7, 5, 655389, 9, 5, 655389, 65525, 3, 655389, 65525, 1, 655389, 65525, 65531, 655389, 65525, 65529, 655389, 1, 7, 1048605, 3, 7, 1048605, 65535, 7, 1048605, 65533, 7, 1048605, 65535, 9, 1048605, 1, 9, 1048605, 3, 9, 1048605, 5, 7, 1048605, 1, 11, 1048605, 131078, 6, 655364, 131082, 3, 1048635, 131082, 5, 1048635, 131078, 2, 1048582, 131077, 2, 4, 131077, 0, 0, 131078, 0, 6, 65525, 5, 655389, 65523, 5, 1048605, 65521, 5, 1048605, 65523, 3, 1048605, 65521, 3, 1048605, 65523, 1, 1048605, 65521, 1, 1048605, 65523, 65535, 1048605, 65521, 65535, 1048605, 65523, 65533, 1048605, 65521, 65533, 1048605, 65523, 65531, 1048605, 65521, 65531, 1048605, 65523, 65529, 1048605, 65521, 65529, 1048605, 65529, 1, 1441821, 65529, 3, 1441821, 65527, 3, 1441821, 65527, 1, 1441821, 65527, 65534, 1441817, 65530, 65535, 1441821, 65530, 65534, 1441821, 65530, 65533, 1441821, 65524, 0, 1441821, 65524, 65534, 1441821, 65524, 65532, 1441821, 65535, 11, 655389, 65533, 9, 655389, 65531, 7, 655389, 7, 7, 655389, 5, 9, 655389, 3, 11, 655389)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="walls" type="GridMap" parent="SubViewportContainer/SubViewport/all/NavigationRegion3D/env"]
mesh_library = ExtResource("4_cc7uj")
data = {
"cells": PackedInt32Array(1, 3, 1048605, 1, 1, 1048605, 1, 5, 82, 65535, 3, 1048605, 65535, 1, 1048605, 65535, 5, 1048605, 3, 3, 1048605, 3, 5, 1048605, 3, 1, 1048605, 0, 5, 1441871, 2, 5, 1441871, 4, 3, 1441882, 4, 5, 1441883, 3, 6, 655438, 65535, 6, 655438, 65534, 3, 1048649, 65534, 5, 1048645, 6, 1, 1441845, 131081, 1, 1441830, 131079, 65535, 1441830, 131081, 65535, 1441830, 131077, 65535, 1441830, 131075, 65535, 1441830, 131073, 65535, 1441830, 196607, 65535, 1441830, 131081, 65533, 1441830, 131079, 65533, 1441830, 131077, 65533, 1441830, 131075, 65533, 1441830, 131073, 65533, 1441830, 196607, 65533, 1441830, 131082, 1, 1048636, 131082, 65535, 1048636, 131082, 65533, 1048636, 131081, 65532, 60, 131079, 65532, 60, 131075, 65532, 60, 131073, 65532, 60, 65534, 1, 1048640, 65533, 1, 1048605, 65533, 3, 1048605, 65533, 5, 1048605, 65533, 65533, 1048605, 65531, 65533, 1048605, 65531, 65535, 1048605, 65531, 1, 1048605, 65531, 3, 1048605, 65531, 5, 1048605, 65529, 5, 1048605, 65527, 5, 1048605, 131077, 65532, 85, 196606, 65532, 1048641, 196607, 65532, 79, 196606, 65534, 1441870, 196606, 0, 1441872, 196606, 1, 1441851, 196606, 3, 1441851, 196606, 5, 1441851, 65533, 6, 655419, 65531, 6, 59, 65529, 6, 655450, 65527, 6, 655419, 65535, 0, 655419, 1, 0, 655419, 3, 0, 655419, 131079, 1, 1441830, 131077, 3, 1048614, 131079, 3, 1048614, 131081, 3, 1048614, 131077, 5, 1048614, 131079, 5, 1048614, 131081, 5, 1048614, 131076, 2, 1048579, 131076, 4, 1048580, 131076, 5, 1048580, 131076, 6, 1048578, 131077, 6, 655364, 131078, 6, 4, 131079, 6, 4, 131080, 6, 4, 131081, 6, 4, 131082, 6, 655362, 5, 6, 60, 7, 6, 69, 9, 6, 59, 10, 5, 1441851, 10, 6, 1441860, 196606, 6, 655428, 65534, 65529, 1048635, 65534, 65527, 1048635, 65534, 65525, 1048635, 65525, 6, 59, 65523, 6, 59, 65521, 6, 59, 65520, 5, 1441851, 65520, 3, 1441851, 65520, 1, 1441851, 65520, 65535, 1441851, 65520, 65533, 1441851, 65520, 65531, 1441851, 65520, 65529, 1441851, 65533, 65527, 1441821, 65531, 65527, 1441821, 65529, 65527, 1441821, 65527, 65527, 1441821, 65525, 65527, 1441821, 65523, 65527, 1441821, 65521, 65527, 1441821, 65521, 65525, 1441821, 65523, 65525, 1441821, 65525, 65525, 1441821, 65527, 65525, 1441821, 65529, 65525, 1441821, 65531, 65525, 1441821, 65533, 65525, 1441821, 65520, 65527, 1441861, 65520, 65525, 1441851, 65534, 65531, 1048635, 65534, 65533, 1048638, 65534, 65535, 1048645, 65533, 65535, 1048605, 65527, 65534, 43, 65527, 65524, 73, 65521, 65524, 59, 65523, 65524, 59, 65525, 65524, 655438, 65529, 65524, 655438, 65531, 65524, 59, 65533, 65524, 59, 65520, 65524, 1048641, 65534, 65524, 65, 65520, 6, 655425, 65521, 65523, 655389, 65523, 65523, 655389, 65525, 65523, 655389, 65527, 65523, 655389, 65529, 65523, 655389, 65531, 65523, 655389, 65533, 65523, 655389, 65531, 65521, 655389, 65529, 65521, 655389, 65527, 65521, 655389, 65525, 65521, 655389, 65523, 65521, 655389, 65529, 65519, 655389, 65527, 65519, 655389, 65525, 65519, 655389)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="spwans" type="Node3D" parent="SubViewportContainer/SubViewport/all"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73615, 0)

[node name="Node3D" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.463, 0, -16.6281)

[node name="Node3D2" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9381, 0, -12.0492)

[node name="Node3D6" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.9381, 0, -19.0492)

[node name="Node3D3" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.77367, 0, -4.60867)

[node name="Node3D4" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.8053, 0, 6.28227)

[node name="Node3D5" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -8)

[node name="Node3D7" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28, 0, -2)

[node name="Node3D8" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.6855, 0, -13.1756)

[node name="Node3D9" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.16058, 0, -8.59669)

[node name="Node3D10" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.1606, 0, -15.5967)

[node name="Node3D11" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5365, 0, -1.15616)

[node name="Node3D12" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.0278, 0, 9.73478)

[node name="Node3D13" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5905, 0, -8.01673)

[node name="Node3D14" type="Node3D" parent="SubViewportContainer/SubViewport/all/spwans"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.2225, 0, 1.45251)

[node name="door" type="StaticBody3D" parent="SubViewportContainer/SubViewport/all"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.02019, 2, 6.98659)

[node name="Area3D" type="Area3D" parent="SubViewportContainer/SubViewport/all/door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/all/door/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.47843, 0.449043, 0.0588379)
shape = SubResource("BoxShape3D_cc7uj")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/all/door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.035553, 0.449043, 0.0136719)
shape = SubResource("BoxShape3D_cc7uj")
disabled = true

[connection signal="timeout" from="GameManager/Timer" to="GameManager" method="_on_timer_timeout"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/all/door/Area3D" to="dungeon_logic" method="_on_area_3d_body_entered"]
